added rest call for all users